fixed gap between labels

--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -10,7 +10,7 @@
 
     .labels-container {
         display: flex;
-        gap: rem(50px);
+        gap: rem(45px);
     }
 
     button {
